| Summary: | ASTERISK-18717: Improve error message for app_confbridge | ||
| Reporter: | Paul Belanger (pabelanger) | Labels: | |
| Date Opened: | 2011-10-13 10:02:32 | Date Closed: | 2011-12-14 14:52:10.000-0600 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_confbridge |
| Versions: | Frequency of Occurrence | ||
| Related Issues: | |||
| Environment: | Attachments: | ( 0) __20111103-better-confbridge_info-error-msg.txt | |
| Description: | The following is not very helpful. {code} app_confbridge.c:2658 func_confbridge_info: Invalid keyword. {code} I now see this error after upgrading to asterisk-10.0.0-beta2, however don't know where to start looking for the problem. | ||
| Comments: | By: David Woolley (davidw) 2011-10-13 10:15:26.008-0500 ${CONFBRIDGE_INFO()} is being passed something other than parties, admins, marked or locked. (Took less than 5 minutes to find this error in the source code and work out what it means, so I consider the message quite adequate.) That sounds very much like a dialplan error and therefore a support question, not a bug. By: Leif Madsen (lmadsen) 2011-11-03 14:37:08.056-0500 Updated the message to be more clear and show what was provided, and what we accept. | ||