Improve error message in CONFBRIDGE_INFO

Provided a more descriptive error message when a value supplied for the parameter
type is not one of the acceptable values.

(closes issue ASTERISK-18717)
Reported by: Paul Belanger
Patches:
  __20111103-better-confbridge_info-error-msg.txt (License #4999)

git-svn-id: https://origsvn.digium.com/svn/asterisk/trunk@348160 65c4cc65-6c06-0410-ace0-fbb531ad65f3